--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ uuid = { version = "1.19.0", features = ["v4"] }
 async-stream = "0.3.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+base64 = "0.22.1"
+chrono = { version = "0.4.43", features = ["std"] }
